# paqpy

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
