[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "paqpy"
version = "1.3.0"
description = "Hash file or directory recursively."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    {name = "gregory langlais"},
]
maintainers = [
    {name = "gregory langlais"}
]

[project.urls]
Homepage = "https://pypi.org/project/paqpy/"
Repository = "https://github.com/gregl83/paqpy"